--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-# Header 1
-## Header 2
-### Header 3
+It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [link to Google!](https://google.com)
 
 Hello World
