--- a/index.html
+++ b/index.html
@@ -2,6 +2,4 @@ It's very easy to make some words **bold** and other words *italic* with Markdow
 
 Hello World
 
-Hello Harry
-
-Hello ron
+Hello Hermione
